Research Statement Updated

--- a/docs/research-statement/proposal.tex
+++ b/docs/research-statement/proposal.tex
@@ -23,12 +23,11 @@
             urlcolor  = blue,
             citecolor = blue,
             anchorcolor = blue]{hyperref}
+\usepackage[most]{tcolorbox}%for mdquote
 
 % My settings
 \sectionfont{\itshape\color{MidnightBlue}}
 \newcommand{\C}[1]{{\tt #1}}
-
-
 \date{}
 \begin{document}
 
