--- a/docs/research-statement/content.tex
+++ b/docs/research-statement/content.tex
@@ -1,276 +1,257 @@
-Computing has come a long way since Von Neumann introduced his
-stored-program model of a computer in 1945. Von Neumann's architecture
-is fundamentally \emph{compute-centric} -- a Central Processing Unit
-(CPU) performs all the computation by periodically fetching data and
-programs from a passive main memory or a secondary storage. Implicit
-in this model is the assumption that it is possible to tread a
-computation's data in its entirety through a ``central'' processor to
-a compute a single value that is the canonical result of a
-computation. This view of computing stands in stark contrast to the
-reality of modern applications, which are fundamentally
-\emph{data-centric} as opposed to compute-centric -- they operate on
-large amounts of data organized into multiple data banks, e.g.,
-\emph{databases}, \emph{shards}, and \emph{replicas}, and perform
-computations that are essentially distributed in nature to compute
-results for which no canonical answer exists. Despite such fundamental
-differences in the nature of computing, applications today are
-nonetheless programmed using the same language abstractions and
-programming techniques that trace their origins to the Von Neumann
-model. The resultant \emph{impedance mismatch} between the computation
-performed and the programming model employed has been a consistent
-source of negative impact on the security, reliability, and
-performance of data-centric applications. For instance, coercing
-database transactions, which are concurrent by their very nature, into
-Von Neumann model of computing, which emphasizes an orderly
-execution of instructions, has resulted in an impedance mismatch that
-effectively exposed several database-backed commercial applications
-to concurrency-related attacks~\cite{acidrain}. One such attack has
-been particularly notorious for it has led to the theft of over
-half-a-million dollars, and subsequent closure of an otherwise
-well-performing Bitcoin exchange named Flexcoin~\cite{poloniexbug}.
-More such examples abound in literature and in popular press.
+The evolution of computational systems has always trended in the direction
+of increasing complexity. While early machines were designed for simple
+sequential computations, modern computational systems routinely operate
+concurrently in distributed environments connected by adversarial and
+unreliable networks. Ensuring safety and security of distributed
+computational systems requires novel programming abstractions and formal
+(reasoning) methods that enable programmers overcome the overwhelming
+complexity inherent to the design of these systems. 
+\begin{mdquote}
+My research attempts to make foundational advances in programming languages
+and formal methods with aim of making provably-safe distributed systems
+development accessible to mainstream software developers.
+\end{mdquote}
+\noindent Formal methods have seen increasing adoption in mission-critical
+systems in the recent years. DARPA's HACMS program, for example,
+demonstrated the effectiveness of formal verification in securing unmanned
+aerial vehicles~\cite{darpa-hacms}. However, their widespread adoption
+remains a challenge due to the steep learning curve, integration
+complexity, and scalability concerns associated with formal methods.
+Bridging the gap between theoretical advances and practical deployment in
+industry requires research into more accessible tools, automated reasoning
+techniques, and programming abstractions that can seamlessly integrate with
+existing development workflows. My work is motivated by these challenges
+and aims to make formal methods more practical and impactful for real-world
+software systems. My research program involves three major thrusts,
+numbered $R_{1-3}$, to address scalability, generality, and usability
+challenges associated with formal methods. I will next summarize each
+research thrust, highlight significant contributions, and present their
+broader impacts and applications. 
 
-% requires explicit enforcement of a concurrency control mechanism
-% called Serializability. By guaranteeing equivalence to an orderly
-% execution of transactions, Serializability lets application
-% developers stay within the familiar confines of Von Neumann model,
-% and has therefore gained universal acceptance as the de facto
-% standard of database systems correctness. In practice however,
-% database systems rarely enforce serializability owing to its
-% expensive nature, choosing instead to employ lenient forms of
-% concurrency control 
+\section*{$R_1$ Scaling Formal Verification to Real Systems}
 
-\section*{My Research}
+Programming safe and reliable distributed systems is extremely
+hard~\cite{aws-formal,samc,Yu2018}. The complexity stems from having to
+simultaneously reason about several failure modes, such as reordered and
+dropped messages, network partitions, and node crashes. Complex
+combinatorial reasoning involving low-level events and high-level
+application logic is hard for humans and machines alike, making it
+challenging to apply formal methods at scale. Consequently, formal
+certification of safety and reliability guarantees of distributed systems
+remains out of reach for most application developers. Any formal
+verification that is currently done in the industry is carried out at the
+level of distributed protocol specifications, e.g., using TLA+~\cite{tla}
+or P~\cite{p-lang}, with no way to translate the guarantees to
+implementations.
 
-As evident from above, there is a need for novel computational models,
-language abstractions and programming techniques that better suit the
-nature of modern data-centric applications. Developing such
-programming infrastructure is indeed one of the focal points of my
-research, in particular my most recent work on distributed programming
-models and replicated data structures~\cite{oopsla19,snapl19,thesis}.
-The more pressing need however is for automated reasoning techniques,
-program analyses, and compilation tools that work with the current
-generation of data-centric applications, helping them meet the ever so
-strict goals of scalability and availability \emph{without}
-compromising security and robustness. Developing such automated
-reasoning infrastructure is another focal point of my research, and a
-unifying theme behind most of my
-work~\cite{popl18,oopsla18,ecoop18,icfp14,pldi15}. \textbf{At a high level, my
-research falls at the intersection of programming languages, software
-engineering, databases, and distributed systems. In particular, I aim
-to solve the most pressing problems in the latter two domains by
-developing novel approaches that build on top of the conventional
-wisdom and technical know-how of the former two}. The relevance
-of my work to the theory and practice of contemporary data-centric
-computing has been recognized through a generous research fellowship
-from Google. In what follows, I describe my research at a high-level
-categorizing it into three broad themes, and conclude by briefly
-describing my ideas for future research.
+Several decades of research into programming languages has shown that
+modularity and abstraction is often the key to overcoming programming
+complexity. The abstractions typically used to program distributed systems
+today expose asynchronous communication primitives and require the explicit
+reasoning about the dynamics of the network state in relation to faults. To
+scale formal verification to real-world systems implementations, we need
+novel programming abstractions that decompose the complexity of fault
+tolerance and protocol logic into loosely-coupled \emph{modules} and
+\emph{services} amenable to independent specification and verification.
 
-\section*{Theoretical Foundations of Data Storage and Processing
-Systems}
+\begin{mdquote}
+Thrust 1 focuses on developing novel programming abstractions that enable
+modular specification, verification, and implementation of distributed systems.
+\end{mdquote}
 
-The theoretical and mental models of data storage systems prevalent
-among the programming community are often too simple to match the
-reality of such systems. For instance, developers commonly assume
-relational databases, such as MySQL and PostgreSQL, to be
-ACID-compliant with Serializable transactions, whereas in reality they
-are not~\cite{bailishotos}. To accentuate performance, database
-systems routinely drop Serializability in favor of weaker
-\emph{isolation} guarantees that do \emph{not} mask the concurrent
-nature of database transactions. This mismatch between expectation and
-reality results in subtle bugs that manifest as serious violations of
-safety~\cite{poloniexbug,acidrain}. The problem is aggravated in case
-of distributed ``NoSQL'' data stores, which, by construction, admit
-\emph{weakly-consistent} executions that defy the commonsense of
-programming.  If programmers were to effectively navigate the complex
-reality of modern data storage systems, novel reasoning techniques and
-automated tool support are essential. Such tools and techniques should
-necessarily be based on sound proof theory and accurate formal models
-of modern data storage systems, which are among the major contribution
-of my research.  In~\cite{popl18}, I present the first ever high-level
-formal semantics of \emph{weak isolation} as it occurs in the real
-world. Based on this semantics, I develop a deductive proof system
-that admits rigorous proofs of correctness for database-backed
-applications composed of weakly-isolated transactions.  In a follow-up
-to this work~\cite{oopsla18}, I extend the formal treatment to
-distributed ``NoSQL'' data stores and their applications composed of
-weakly-consistent operations. A distinguishing feature of both the
-formalisms is their remarkable simplicity notwithstanding their
-comprehensive treatment of complex real-world data systems. Such
-simplicity is indeed what makes the formal reasoning to be automated
-and applied at scale to identify concurrency-related vulnerabilities
-and verify correctness of realistic (distributed) database
-applications, as shall be explained in the next subsection.
+The primary motivation for modular decomposition in our case is automated
+verification as opposed to efficient implementation. To be amenable to
+SMT-aided automated reasoning, verification conditions should be encodable
+in a a decidable logic, which requires deliberate design of modules and
+interfaces. As a part of ongoing work in Thrust 1, we are developing
+language-embedded specification and reasoning frameworks that reduce the
+manual effort and creative inputs involved in this process. The broadest
+impact will be on mainstream application programmers, who may not have the
+expertise to build mission-critical distributed systems. Our research will
+help programmers overcome the complexity of this task by making formal
+verification and machine-assisted reasoning readily accessible. 
 
-My work in theoretical foundations extends to data processing systems
-as well. In~\cite{ecoop18}, I demonstrate how stream processing
-systems (Microsoft's Naiad in particular) can take advantage of
-GC-free memory regions to significantly increase overall
-throughput of the system without compromising memory safety.
-The region type system I present in the paper, albeit grounded in
-sound theory, is an exercise in pragmatism for it strikes a fine
-balance between static type checking and lightweight run-time checks
-to ensure that the type system does not ``get in the way'' of Naiad's
-expert developers. Such productive collaborations with systems and
-database researchers is, I believe, how my research can have the most
-impact going forward.
+\mypara{Significant Contributions} Our early work in Thrust
+1~\cite{mrdt, snapl19, quark} focused on development of \emph{Mergeable
+Replicated Data Types} (MRDTs) -- a high-level distributed programming
+abstraction that guarantees fault tolerance by design. We built a
+distributed runtime for MRDTs, called \quark~\cite{quark}, that
+orchestrates distributed computation in a way that is guaranteed to
+converge. This is in contrast to the state-of-the-art RDT abstractions,
+which require the programmer to prove the convergence of a computation
+explicitly~\cite{crdt}. \quark has allowed us to uncover novel performance
+tradeoffs in distributed applications and collect strong experimental
+evidence demonstrating the viability of high-level programming abstractions
+for \emph{coordination-free} distributed computations. Theoretically, RDTs
+are a high-level abstraction of a weakly-consistent replicated state
+machine (RSM), denoted $\eventual$ RSM. While $\eventual$ RSMs are often
+useful, safety-critical distributed systems need strongly-consistent
+($\strong$) RSMs, whose implementations are known to be notoriously
+complex. In our recent work~\cite{lewchenko-oopsla25}, we have shown that
+$\eventual$ RSMs can be extended with modules of inter-replica coordination
+to obtain $\strong$ RSMs, resulting in a modular approach that drastically
+reduced the overhead of safety verification. We implemented this technique
+in a verification framework called \superv and used it to automatically
+verify an industry-strength implementation of Raft log replication
+protocol~\cite{raft}. We believe this is a notable achievement considering
+that verification efforts of similar nature required 2-3 orders of
+magnitude more manual annotations~\cite{VerdiRaft}. Our results will soon
+be presented at SIGPLAN OOPSLA 2025 conference. 
 
-\section*{Automatic Verification and Synthesis for Data-Centric
-Applications}
+\mypara{Funding and Project Management} The primary source of funding has
+thus far been my startup grant. An Amazon Research Award providing \$50,000
+to this work had to be declined on insistence of CU's office of contracts
+and grants (OCG). An NSF Small proposal titled \emph{A  Modular Approach to
+Practical Distributed Systems Veriﬁcation} is currently pending review. The
+proposed budget is \$480,110 to be spent over three years. The project team
+includes Mr. Nicholas Lewchenko, a PhD student advised by me. Mr. Lewchenko
+will graduate in Spring 2026 and will be replaced by a new graduate student
+yet to be admitted. 
 
-My theoretical work in~\cite{popl18, oopsla18, ecoop18} gave me an
-excellent framework within which I could develop novel techniques in
-automated verification, modelchecking, type inference, and program
-synthesis for data-centric applications. Building on the proof system
-in~\cite{popl18}, I built a tool called \acidifier that can
-automatically analyze MySQL and PostgreSQL applications with
-weakly-isolated transactions to either detect concurrency-related
-vulnerabilities or certify them correct.  \acidifier can  also infer
-the weakest (hence most scalable) isolation configurations at which it
-is safe to run these applications. For instance, for the TPC-C OLTP
-benchmark, \acidifier discovered that none of the transactions need to
-be run at Serializable isolation in order to guarantee the correct
-behavior, which turned out to be accurate. Another tool I built,
-called \qnine is based on a novel operational semantics of
-weakly-consistent replicated data stores I present
-in~\cite{oopsla18}, and extends automated (bounded) verification to
-distributed ``NoSQL'' applications. \qnine analyzes distributed
-applications under a finite concurrency bound by reducing the
-application logic and data store semantics into set-theoretic
-constraints that can be very efficiently solved using off-the-shelf
-SMT solvers. This approach helped \qnine discover a range of
-weak-consistency bugs in large-scale applications, including the
-distributed variants of TPC-C and TPC-E OLTP benchmarks in just under
-two minutes, and subsequently repair the applications through
-selective consistency strengthening.
+\section*{$R_2$ Generalizing Formal Verification to Adversarial Networks}
 
-Beyond verification, my work also spans synthesis of replicated data
-types (RDTs), such as replicated queues and document trees, which are
-the building blocks of an emerging class of peer-to-peer and
-interactive distributed applications, including blockchains and
-collaborative editors. The theoretical foundations were laid
-in~\cite{icfp14}, where I show that any functional data structure can
-be reduced to a collection of \emph{structural relations} for
-which automatic reasoning is decidable. In~\cite{icfp14}, I built a
-dependent type system called \catalyst that performs the
-aforementioned relational reasoning to automatically verify the
-correctness of data structure transformations, such as AST
-transformations in a compiler. The ideas were further developed
-in~\cite{oopsla19} to automatically \emph{synthesize} data structure
-transformations, in particular a \emph{merge} transformation that
-merges concurrent versions of a given data type in the context of
-their common ancestor. This crucial result made it possible to
-automatically \emph{derive} replicated data types from first
-principles, thus providing a simpler and more principled alternative
-to the currently-popular variants of replicated data types that insist
-on commutativity of operations (i.e., CRDTs).  The synthesis approach
-was used in practice to automatically derive a standard library of \emph{mergeable}
-replicated data types (MRDTs) from ordinary OCaml data types, which
-were then used to build decentralized (peer-to-peer) variants of large
-OLTP benchmarks~\cite{oopsla19}.
+Like the prior work on distributed systems verification~\cite{verdi,
+VerdiRaft, disel-popl18}, Thrust 1 focuses on \emph{crash faults} such as
+node crashes and network partitions. In conventional data center-based
+deployments, exceptional behavior is almost exclusively due to crash
+faults. However, distributed systems now increasingly operate the public
+internet, where they are used to implement novel decentralized
+applications, such as blockchain
+cryptocurrencies~\cite{nakamoto-bitcoin08,buterin-eth14} and federated
+social networks~\cite{mastodon,bluesky}. A decentralized application is
+effectively a distributed protocol designed to operate on a public network.
+The early successes of decentralized applications and the push towards
+local-first software~\cite{local-first} are expected to accelerate the
+development of a novel class of distributed protocols designed to execute
+on internet-native distributed systems. While network partitions remain a
+major concern on public networks,  more serious concern is the presence of
+adversaries who can actively subvert protocol executions towards unsafe or
+unproductive states \emph{even} when all the protocol participants are
+honest (i.e., non-byzantine). Ensuring the safety of distributed systems
+and the privacy of their users on adversarial networks requires
+synthesizing reasoning and verification techniques from Cryptography and
+Distributed Systems.
+\begin{mdquote}
+  The focus of Thrust 2 is to develop a unified framework that combines cryptographic proofs of security with formal verification of distributed protocols. 
+\end{mdquote}
+\noindent The goal is to help developers obtain strong guarantees of safety
+and privacy in adversarial environments. Like in Thrust 1, we seek modular
+abstractions that allow compositional specification and verification of
+protocol components, but now with explicit modeling of adversarial actions
+and cryptographic primitives. In our ongoing work, we are developing
+frameworks that enable automated reasoning about both protocol correctness
+and cryptographic soundness, aiming to reduce the manual effort required
+for end-to-end verification. This approach will empower developers to build
+robust decentralized applications that are resilient to both crash faults
+and active attacks, facilitating broader adoption of secure distributed
+systems in practice.
 
-\section*{Novel Programming Models for Data-Centric Computation}
+\mypara{Significant Contributions} In~\cite{waldo-oopsla23}, we introduced
+a novel formal model of cryptography and an associated probablistic
+relational verification framework. In formal verification of cryptographic
+protocols, a network attacker is modeled in one of the two fundamentally
+different ways: (a). a \emph{symbolic} or \emph{Dolev-Yao} attacker defined
+in terms of what the attacker can do~\cite{dolev-yao}, and (b). a
+\emph{computational} attacker defined in terms of what the attacker can not
+do~\cite{blanchet-tr23, bellare-eurocrypt06}. Correspondingly, two standard
+models of cryptography -- \emph{Symbolic} and \emph{Computational} -- have
+emerged. While the former is simpler and amenable to symbolic reasoning, it
+underapproximates attacker capabilities, hence misses several classes of
+attacks. Conversely, the latter is more general and precise, but requires
+arduous manual proofs. In~\cite{waldo-oopsla23}, we introduced a
+probabilistic model of cryptography that combines the strengths of both: it
+is more precise than the symbolic model (hence covers more classes of
+attacks) and more amenable to automation than the computational model. We
+implemented the probabilistic model in an SMT-aided verification framework
+called \waldo. \waldo is released publicly with an open source license, and
+was used to identify subtle privacy issues in the draft proposal for TLS
+Encrypted Client Hello (ECH) extension~\cite{ech-draft}. We believe this is
+a significant milestone considering that TLS is the protocol powering
+secure HTTP connections for the entire internet, hence any privacy issues
+are bound to have adverse consequences. 
 
-Another focal point of my research work is the development of novel
-language abstractions and programming models that better suit the
-nature of data-centric computing. I made two major contributions
-towards this end. In~\cite{pldi15}, my collaborators and I present a
-Haskell domain-specific language (DSL) called \quelea that liberates
-application development on weakly-consistent ``NoSQL'' stores
-from the Von Neumann style. \quelea starts with a clean-slate design
-where, unlike the Von Neumann model, \emph{no} order is guaranteed
-between any two operations, i.e., no consistency is assumed
-whatsoever. Instead, applications are required to \emph{declare} their
-consistency requirements as a series of high-level ordering
-constraints on their operations, which will then be then be compiled
-down to efficient low-level code that handles systems and networking
-concerns (analogous to how declarative Haskell programs are compiled
-to efficient low-level imperative code by GHC). As we demonstrate
-in~\cite{pldi15}, \quelea drastically reduces the effort required to
-build highly-scalable distributed applications on top of off-the-shelf
-NoSQL data stores, e.g., Cassandra.
+\mypara{Funding and Project Management} The primary source of funding has
+thus far been my startup grant. My NSF CAREER proposal titled
+\emph{Verifying Safety and Privacy of Distributed Systems on Adversarial
+Networks} is currently under review. The proposed budget is \$714,519 to be
+spent over five years for the activities in Thrust 2. In addition, we have
+partnered with Psiphon Inc~\cite{psiphon} to provide inputs to DARPA PM Mr.
+Michael Lack on formulating a new program on privacy verification on
+internet. The project team includes PhD students Mr. Kirby Linvill and Mr.
+Sai Aka, both advised by me. 
 
-The second contribution is an OCaml DSL, named \carmot, for building
-peer-to-peer decentralized applications~\cite{snapl19,oopsla19}. Key
-to \carmot is the observation that a distributed computation (on data)
-is not fundamentally different from the collaborative development (of
-source code), hence familiar version control protocols, e.g, Git,
-which have been successfully used to manage the latter, can be
-profitably employed in the context of the former. Indeed, \carmot lets
-programmers orchestrate a distributed computation very much like a Git
-workflow, namely by forking branches, committing concurrent versions,
-and periodically merging versions to keep the branches in sync. As we
-demonstrate in~\cite{snapl19,oopsla19}, the novel version
-control-inspired programming model of \carmot is indispensable in
-bringing the benefits of Mergeable Replicated Data Types (MRDTs), in
-particular automatic synthesis, to fully-decentralized data-centric
-applications, taking us one step closer to the goal of automatically
-deriving such applications from their sequential counterparts.
+\section*{$R_3$ Making Formal Verification Accessible to Non-Experts}
 
-\section*{Future Work}
+A  significant progress has been made in the formal methods community
+towards automating symbolic reasoning for complex systems. However, the
+tools and languages developed often require a specialized skill set to
+write precise mathematical specifications and proofs, which is often out of
+reach for mainstream application programmers. To make formal methods an
+accessible and routine part of the software development lifecycle, there is
+a need for novel techniques and tools that flatten the learning curve and
+lower the barrier to entry. The recent progress in Large Language Models
+(LLMs) provides an exciting opportunity to (a). leverage natural languages
+as interfaces to formal verification tools, and (b). use generative AI to
+guide the proof search process. There are also notable new inventions in
+programming language techniques, such as the Incorrectness Logic and
+Goal-directed abstract abstract interpretation, which require minimal user
+inputs to drive formal verification. In Thrust 3, our goal is to leverage
+these developments to drastically improve the usability of formal methods,
+particularly in the context of distributed systems. 
+\begin{mdquote}
+Thrust 3 focuses on developing symbolic and neuro-symbolic reasoning
+techniques to automate formal verification for distributed systems. 
+\end{mdquote}
 
-I see many opportunities for future research in data-centric
-computing, which I would like to pursue in collaboration with
-researchers in Systems, Databases, Cryptography, and Machine Learning.
-I sketch a few possibilities below.
+\mypara{Significant Contributions} In~\cite{lewchenko-oopsla26}, we
+proposed a novel partial-function semantics for higher-order functional
+programs that makes them amenable to decidable encoding in SMT solvers.
+Partial functions underapproximate total functions, which makes formal
+verification unsound in general. Our key contribution is a set of
+sufficient conditions under which the underapproximation is actually sound.
+We developed a language extension to Rust, called $\lepr$, that lets
+non-expert programmers use SMT solvers to automatically verify deep
+semantic properties of higher-order functional programs. Another notable
+contribution is the \dissprove verification
+framework~\cite{fontenot-dissprove} for distributed protocols that
+leverages a novel goal-directed backwards analysis we introduced in our
+earlier work~\cite{meier-oopsla23} to eliminate the need for inductive
+invariants (for a class of protocols). Identifying the right inductive
+invariants is often hardest step in formal verification of distributed
+protocols~\cite{ivy2016}. By short-circuiting this process, \dissprove
+makes it feasible for non-experts to build provably-safe distributed
+systems.
 
-{\itshape\color{MidnightBlue}Formal models of complex software systems}
-In~\cite{popl18} and~\cite{oopsla18}, I demonstrate the utility of
-employing simple formal models of (distributed) database systems in
-lieu of their complex implementations to reason about application
-safety. I see this approach being useful in the context of file
-systems, lock-free data structures, data processing libraries --
-basically any real-world software system that accrues code and
-optimizations from decades of engineering effort, and becomes too
-complex to be analyzed directly by the verification tools tasked with
-establishing the safety of their clients. Building high-fidelity
-formal models of such systems, however, requires considerable domain
-knowledge, which is often scattered through API and informal
-documentation, unit tests, configuration files, logs, and commit
-messages. Mining structured knowledge from these sources, and (mostly)
-automating the task of synthesizing formal models that act as proxies
-for these systems during verification is a challenging-yet-worthwhile
-exercise, and one that I plan to take up in near future.
+\mypara{Ongoing Work} In the above, we have only considered systems with
+discrete dynamics. Our ongoing work extends formal verification to systems
+with continuous dynamics where state transitions are defined in terms of
+ordinary differential equations (ODEs). The complex structure of the ODEs
+often makes it expensive to perform computations such as simulations and
+probabilistic inference. In our ongoing work, we are building a DSL for
+probabilistic programming with ODEs coupled with a verified optimizing
+compiler. The compiler orchestrates a series of semantics-preserving
+transformations, such as latent variable elimination, to automatically
+transform ODEs into a form amenable to efficient inference. This allows
+domain experts to focus on specifying system dynamics without concerning
+themselves with efficient implementations. In another thread of ongoing
+work, we showed that purely neural approaches, including the
+state-of-the-art LLMs, perform poorly on program synthesis
+tasks~\cite{roberson-arxiv2024}. To improve the effectiveness of LLM-driven
+program synthesis, we designed a semantics-constrained decoding technique
+that uses conventional symbolic techniques to prune unproductive inference
+paths. The early results are promising and we are working on developing a
+stand-alone tool to apply our insights at scale. 
 
-{\itshape\color{MidnightBlue}Programming models for
-fully-decentralized and privacy-conscious computing}  Users of
-internet services are becoming increasingly vocal about their
-(justifiable) privacy concerns on the internet. Ambitious initiatives
-have sought to address this issue by promoting full decentralization in
-application and network protocol design (e.g., Blockchains and IPFS),
-and by putting people in charge of their data in their own premises
-(e.g., TRVE Data).  Well-intended as they may be, such initiatives
-nonetheless have systemic issues for there are currently no languages
-and tools that can bridge the wide chasm between the limited human
-cognition of the programmer, and planet-scale workings of the
-underlying system. In~\cite{snapl19}, I show that a distributed
-programming model inspired by version control workflow can
-significantly reduce the cognitive burden involved in building highly
-decentralized applications. However, the questions about performance
-(at internet-scale) and privacy are yet unanswered, and addressing
-them may require a significant re-think of how computation should be
-performed over the internet. I would like to collaborate with Systems,
-Database, and Cryptography researchers towards answering this
-question.
+\mypara{Funding and Project Management} The verified ODE transformation
+work is funded by the NSF Formal Methods in the Field (FMitF) program from
+09/01/2024 to 08/31/2028 through award number: 2422136, amount: \$875,000,
+titled: \emph{FMitF: Track I: Verified Probabilistic Programming for Hybrid
+Systems}. An Amazon Research Awards (ARA) proposal titled \emph{Program
+Synthesis with Syntax-Aligned Language Models} is currently under review.
+The project team includes Mr. Oscar Bender-Stone, an undergraduate student
+on Discovery Learning Apprenticeship (DLA) program, along with the PhD
+students Mr. Christian Fontenot, Mr. Nicholas Lewchenko, Mr. Kirby Linvill,
+and Ms. Manasvi Parekh. 
 
-{\itshape\color{MidnightBlue} Distributed vector representations of
-data-centric computations} Following the runaway success of
-``word2vec'' in natural language processing, there have been attempts
-to build distributed vector representations of code snippets
-(``code2vec'') with the aim of comparing and predicting the semantic
-properties of code. While the approach is promising, the success so
-far has been limited owing to the high semantic complexity of
-general-purpose computations in a Turing-complete language compared to
-words in a natural language. I believe more success can be had by
-restricting our attention to data-centric computations of which most
-are expressible in a Turing-\emph{incomplete} language such as Datalog (A
-case in the point is SQL, which is a subset of Datalog. Another
-example is the TPC-C benchmark we used in evaluating
-\acidifier~\cite{popl18}, which was completely written in a
-Turing-incomplete OCaml DSL). I am therefore interested in evaluating
-the possibility of building distributed vector representations of
-data-centric computations expressed in (a variant of) Datalog --
-``Datalog2Vec'', in collaboration with researchers in Databases, 
-Machine Learning, and NLP.
+
 
