--- a/docs/research-statement/statement.tex
+++ b/docs/research-statement/statement.tex
@@ -1,5 +1,9 @@
 \documentclass[11pt]{article}
 
+
+\usepackage[letterpaper, margin=1in, headheight=15pt]{geometry}
+\usepackage{fancyhdr}
+\usepackage{titling}
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -8,53 +12,95 @@
 \usepackage{xspace}
 \usepackage{mathtools}
 \usepackage{mathpartir}
-\usepackage{fullpage}
 \usepackage{ifpdf}
 \usepackage[usenames,dvipsnames]{color}
 \usepackage{stmaryrd}
 \usepackage[numbers]{natbib}
 \usepackage{amsthm}
-\usepackage{textcomp}
-\usepackage{tgpagella}
 \usepackage{sectsty}
 \usepackage{csquotes}
 \usepackage[colorlinks = true,
-            linkcolor = black,
-            urlcolor  = black,
-            citecolor = black,
+            linkcolor = blue,
+            urlcolor  = blue,
+            citecolor = teal,
             anchorcolor = blue]{hyperref}
+\usepackage{tgheros}
+\usepackage[most]{tcolorbox}
+\renewcommand{\familydefault}{\sfdefault}
+
+
 
 % My settings
-\sectionfont{\itshape\color{MidnightBlue}}
+% -------------
+\newcommand{\mypara}[1]{\noindent\fcolorbox{white}{black!5}{\bf #1}}
+
+% For block quote
+% ----------------
+\newtcolorbox{mdquote}{
+  colback=white,
+  colframe=white,
+  left=3pt,
+  right=3pt,
+  top=3pt,
+  bottom=3pt,
+  enhanced,
+  borderline west={2pt}{0pt}{gray},
+  boxrule=0pt,
+  fontupper=\itshape, 
+  width=\dimexpr\linewidth-2pt\relax,
+}
+
+
+\sectionfont{\color{teal}}
 \newcommand{\C}[1]{{\tt #1}}
 \newcommand{\acidifier}{{\sc ACIDifier}\xspace}
 \newcommand{\qnine}{{\sc Q9}\xspace}
 \newcommand{\catalyst}{{\sc Catalyst}\xspace}
 \newcommand{\quelea}{{\sc Quelea}\xspace}
-\newcommand{\carmot}{{\sc Carmot}\xspace}
+\newcommand{\quark}{{\sc Quark}\xspace}
+\newcommand{\superv}{{\sc Super-V}\xspace}
+\newcommand{\waldo}{{\sc Waldo}\xspace}
+\newcommand{\dissprove}{{\sc Dissprove}\xspace}
+\newcommand{\lepr}{\Lambda_{\texttt{EPR}}}
+\newcommand{\eventual}{\blacklozenge}
+\newcommand{\strong}{\blacksquare}
 
 
+% Header setup
+% `pagestyle{fancy}` must come after package loads but before \begin{document}
+\pagestyle{fancy}
+\fancyhf{}
+\fancyhead[L]{\Large Gowtham Kaki {\color{Gray} {$\vert$} Research Statement} }
+\renewcommand{\headrulewidth}{0pt}
+
+% === FIX FOR THE TITLE PAGE ===
+% The title page uses the 'plain' page style by default.
+% We redefine what 'plain' looks like to match our fancy header.
+\fancypagestyle{plain}{
+  \fancyhf{} % clear all header and footer fields
+  \fancyhead[L]{\Large Gowtham Kaki {\color{Gray} {$\vert$} Research Statement} }
+  \renewcommand{\headrulewidth}{0pt}
+}
+% ==============================
+
+\setlength{\droptitle}{-0.6in} 
+\title{\color{MidnightBlue} Research Statement}
+\author{}
 \date{}
+
 \begin{document}
 
-\title{\itshape\color{MidnightBlue} Research Statement}
-%\subtitle{Research Summary}
-
-\author{Gowtham Kaki}
-
-\maketitle
-
-\input{content-suny}
+% This command applies the "fancy" style to the title page
+\thispagestyle{fancy}
+%\maketitle
+%\vspace*{-1in}
+\input{content}
 
 
 {
-%\small
-% \bibliographystyle{plainnat} \small \bibliography{report}
+  \small
+  \bibliographystyle{plainnat}
+  \bibliography{all}
 }
 
-\bibliographystyle{plainnat}
-\small
-\bibliography{all}
-
 \end{document}
-
