--- a/docs/reappointment/cv/kaki-cv.tex
+++ b/docs/reappointment/cv/kaki-cv.tex
@@ -189,21 +189,9 @@ Cryptography, Databases, Functional Programming, Automated Reasoning, Program An
 \heading{D. Awards/Honors}
 
 \vspace{1em}
-\noindent {\em Award Papers}
-%\vspace*{-0.1in}
-\begin{center}
-  \begin{tabular}{ p{15cm}  r }
-    %
-    {\bf IEEE Data Engineering: Bulletin Special Issue Invitation} & 2016\\ [3pt]
-    \hspace{2em} Representation without Taxation: A Uniform, Low-Overhead,
-    and High-Level Interface & \\
-    \hspace{2em} to Eventually Consistent Key-Value Stores   & \\[6pt]
-    %
-    \end{tabular}
-\end{center}
 
 \noindent {\em Professional}
-%\vspace{-1em}
+\vspace{-0.8em}
 \begin{center}
   \begin{tabular}{ p{15cm}  r }
 {\bf Amazon Research Award} & 2023 \\ [3pt]
@@ -223,6 +211,20 @@ Engineering research & 2019 \\ [3pt]
     \hspace{2em} BITS, Pilani, India. & \\[6pt]
    \end{tabular}
 \end{center}
+
+\noindent {\em Award Papers}
+%\vspace*{-0.1in}
+\begin{center}
+  \begin{tabular}{ p{15cm}  r }
+    %
+    {\bf IEEE Data Engineering: Bulletin Special Issue Invitation} & 2016\\ [3pt]
+    \hspace{2em} Representation without Taxation: A Uniform, Low-Overhead,
+    and High-Level Interface & \\
+    \hspace{2em} to Eventually Consistent Key-Value Stores   & \\[6pt]
+    %
+    \end{tabular}
+\end{center}
+
 
 \heading{E.  Funding}
 
@@ -706,7 +708,7 @@ otherwise specified.
       \hspace{1ex} Verification of Distributed Systems (VDS) Workshop,
       Rabat, Morocco. &
       \textit{May 2025} \\
-      \hspace{1ex} State of Scale, ETH Denver. &
+      \hspace{1ex} State of Scale @ ETH Denver Conference. &
       \textit{Feb 2025} \\
       \end{tabular*}
 
@@ -799,11 +801,11 @@ EuroSys.
 \item Organizing Committee Member: OOPSLA 2023, OOPSLA 2024.
 \end{itemize}
 
-\vspace{1em}
+
 \heading{K. Citizenship Status}
+\vspace{1em}
 
 Citizenship: India.
-
 
 US permanent residency petition (I-140) approved. 
 \end{document}
